// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard should render company with bold keyword 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      className="positionTitle"
      semiStrong={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="companyName"
        >
          <span
            className="highlight"
            key="0"
          >
            SEEK
          </span>
          <span
            className={null}
            key="1"
          >
             Asia
          </span>
        </span>
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render job title with bold keyword 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div>
      <Text
        baseline={true}
        className="positionTitle titleKeyword"
        key="0"
        semiStrong={false}
        strong={true}
        waving={true}
      >
        Senior
      </Text>
      <Text
        baseline={true}
        className="positionTitle"
        key="1"
        semiStrong={true}
        strong={false}
        waving={true}
      >
         Software 
      </Text>
      <Text
        baseline={true}
        className="positionTitle titleKeyword"
        key="2"
        semiStrong={false}
        strong={true}
        waving={true}
      >
        Engineer
      </Text>
      <Text
        baseline={true}
        className="positionTitle"
        key="3"
        semiStrong={true}
        strong={false}
        waving={true}
      >
         (6 months Contract)
      </Text>
    </div>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="companyName"
        >
          <span
            className="highlight"
            key="0"
          >
            SEEK
          </span>
          <span
            className={null}
            key="1"
          >
             Asia
          </span>
        </span>
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render jobStreet standout style 1`] = `
<Card
  className="root highlightedBg"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      className="positionTitle"
      semiStrong={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="companyName"
        >
          <span
            className="highlight"
            key="0"
          >
            SEEK
          </span>
          <span
            className={null}
            key="1"
          >
             Asia
          </span>
        </span>
      </Text>
      <div
        className="jobDescriptionSection"
      >
        <Text
          baseline={true}
          className="bodyDescriptionText"
          intimate={true}
        >
          Responsibilities :Responsible for Client Relationship Management and Worker Performance Management. Responsible for full spectrum of human resource and admin function, include...
        </Text>
      </div>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
    <div
      className="companyLogoWrapper"
    >
      <img
        className="companyLogo"
        src="https://siva.jsstatic.com/my/94463/images/logo/94463_logo_0_48885.png"
      />
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render jobsDB default style 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      className="positionTitle"
      semiStrong={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="companyName"
        >
          <span
            className="highlight"
            key="0"
          >
            SEEK
          </span>
          <span
            className={null}
            key="1"
          >
             Asia
          </span>
        </span>
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with Classified in grey label 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      className="positionTitle"
      semiStrong={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="classifiedLabel"
        >
          Classified
        </span>
        <span
          className="companyName"
        >
          SEEK Asia
        </span>
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with company confidential in grey label 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      className="positionTitle"
      semiStrong={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="confidentialLabel"
        >
          Company Confidential
        </span>
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with default props 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      className="positionTitle"
      semiStrong={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="companyName"
        >
          SEEK Asia
        </span>
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with featured label 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      className="positionTitle"
      semiStrong={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="featuredLabel"
        >
          Feature
        </span>
        <span
          className="companyName"
        >
          SEEK Asia
        </span>
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with selling points props 1`] = `
<Card
  className="root"
>
  <Section
    className="headerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      className="positionTitle"
      semiStrong={true}
      waving={true}
    >
      Senior Software Engineer (6 months Contract)
    </Text>
  </Section>
  <Section
    className="bodySection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="bodyDetailsWrapper"
    >
      <Text
        baseline={true}
        className="company"
        intimate={true}
      >
        <span
          className="companyName"
        >
          SEEK Asia
        </span>
      </Text>
    </div>
  </Section>
  <Section
    className="footerSection"
    header={false}
    pullout={false}
    slim={false}
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfoContainer"
      >
        <div
          className="jobInfoList"
        >
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <LocationIcon
              className="jobInfoIcon"
            />
             
            Kuala Lumpur
          </Text>
          <Text
            baseline={true}
            className="jobInfo"
            intimate={true}
          >
            <MoneyIcon
              className="jobInfoIcon"
            />
             
            RM99999 - RM999999
          </Text>
        </div>
        <Text
          baseline={true}
          className="postingDuration"
          whispering={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
  </Section>
</Card>
`;
